syntax = "proto3";

package io.vertx.grpc.examples;

option java_package = "io.vertx.grpc.examples";
option java_outer_classname = "ChatProto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Chat {
    rpc PostMessage (ChatMessage) returns (google.protobuf.Empty) {}
    rpc GetMessages (google.protobuf.Empty) returns (stream ChatMessage) {}
}

message ChatMessage {
    google.protobuf.Timestamp when = 1;
    string author = 2;
    string message = 3;
}
